TestMetadataRetention fails due to missing symbol id

XMLWordPrintable

    • jfr
    • b21

        ----------System.err:(33/2595)----------
        java.lang.InternalError: Missing object id=16777227 in pool jdk.types.Symbol. All ids should reference object
        at jdk.jfr/jdk.jfr.internal.consumer.ConstantMap.get(ConstantMap.java:100)
        at jdk.jfr/jdk.jfr.internal.consumer.ConstantMap$Reference.resolve(ConstantMap.java:56)
        at jdk.jfr/jdk.jfr.internal.consumer.ConstantMap.resolve(ConstantMap.java:137)
        at jdk.jfr/jdk.jfr.internal.consumer.ConstantMap.resolve(ConstantMap.java:143)
        at jdk.jfr/jdk.jfr.internal.consumer.ConstantMap.get(ConstantMap.java:118)
        at jdk.jfr/jdk.jfr.internal.consumer.ConstantMap$Reference.resolve(ConstantMap.java:56)
        at jdk.jfr/jdk.jfr.internal.consumer.ConstantMap.resolve(ConstantMap.java:137)
        at jdk.jfr/jdk.jfr.internal.consumer.ConstantMap.resolve(ConstantMap.java:143)
        at jdk.jfr/jdk.jfr.internal.consumer.ConstantMap.get(ConstantMap.java:118)
        at jdk.jfr/jdk.jfr.internal.consumer.ConstantMap.lambda$resolve$0(ConstantMap.java:151)
        at jdk.jfr/jdk.jfr.internal.LongMap.forEachKey(LongMap.java:224)
        at jdk.jfr/jdk.jfr.internal.consumer.ConstantMap.resolve(ConstantMap.java:151)
        at jdk.jfr/jdk.jfr.internal.consumer.ChunkParser.lambda$new$2(ChunkParser.java:137)
        at jdk.jfr/jdk.jfr.internal.LongMap.forEach(LongMap.java:233)
        at jdk.jfr/jdk.jfr.internal.consumer.ChunkParser.<init>(ChunkParser.java:137)
        at jdk.jfr/jdk.jfr.internal.consumer.ChunkParser.nextChunkParser(ChunkParser.java:144)
        at jdk.jfr/jdk.jfr.consumer.RecordingFile.findNext(RecordingFile.java:244)
        at jdk.jfr/jdk.jfr.consumer.RecordingFile.readEvent(RecordingFile.java:110)
        at jdk.jfr/jdk.jfr.consumer.RecordingFile.readAllEvents(RecordingFile.java:227)
        at jdk.test.lib.jfr.Events.fromRecording(Events.java:274)
        at jdk.jfr.event.oldobject.TestMetadataRetention.main(TestMetadataRetention.java:103)
        at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
        at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
        at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
        at java.base/java.lang.reflect.Method.invoke(Method.java:564)
        at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:127)
        at java.base/java.lang.Thread.run(Thread.java:830)

        JavaTest Message: Test threw exception: java.lang.InternalError: Missing object id=16777227 in pool jdk.types.Symbol. All ids should reference object

              Assignee:
              Markus Grönlund
              Reporter:
              Markus Grönlund
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: