8231081: TestMetadataRetention fails due to missing symbol id

Reviewed-by: egahlin